feat: redesigned school-grouped GUI + particle reduction + isOnline guards
== GUI Redesign (SpellSelectionGUI + MasteryGUI) ==

SpellSelectionGUI — completely rewritten with school-grouped rows:
- Row 0: filter tabs (All/Naruto/Tensura/Mushoku/OnePiece) + border
- Row 1: Naruto school icon (col 0) + 7 Naruto spells (cols 1-7)
- Row 2: Tensura school icon + 7 Tensura spells
- Row 3: Mushoku school icon + 7 Mushoku spells
- Row 4: OnePiece school icon + 7 OnePiece spells
- Row 5: prev + border + close + next
- School icon at column 0 of each row (clickable to filter by that school)
- Ability icon IS the spell's own icon next to its name (per user request)
- 28 spell slots (7 x 4) — matches PAGE_SIZE exactly, no more silent drops
- Active filter is highlighted with chevrons (>> All <<)
- Filter preserved across pagination (was being reset to null)
- Mana cost hidden from lore when mana.enabled is false
- Bad filter names in gui_textures.yml no longer crash (try/catch)
- openSpellbook defaults to "All Schools" (was defaulting to Naruto)

MasteryGUI — redesigned layout:
- Filter tabs moved to row 0 (slots 0-3) — was conflicting with T3 spells
- T3 spells now get the full bottom row (slots 46-52) with zero overlap
- T1: row 1 (slots 10-16), T2: row 3 (slots 28-34), T3: row 5 (slots 46-52)
- Left/right border columns + connector rows properly filled (no more gaps)
- schoolFilterAt updated to match new filter tab positions (slots 0-3)

gui_textures.yml layout updated to match the new design:
- border-slots: no overlap with spell slots
- school-icon-slots: [9, 18, 27, 36] — new key for school icon column
- spells-per-school-per-page: 7

== Spell Fixes ==

isOnline() guards added to 51 repeating BukkitRunnable tasks across 30
spell files. Tasks now self-cancel if the caster logs out, preventing:
- CPU waste on dead player objects
- NPEs accessing stale Player state
- Damage continuing at the player's logout location

Particle reduction (worst offenders):
- DisintegrationSpell